<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@mipmap/background"
    style="@style/Base.Theme.AppCompat.CompactMenu">

    <Button
        android:layout_width="@dimen/Button_width"
        android:layout_height="@dimen/Button_height"
        android:onClick="Play"
        android:text="@string/play"
        android:id="@+id/play" />

    <Button
        android:layout_width="@dimen/Button_width"
        android:layout_height="@dimen/Button_height"
        android:onClick="Chose"
        android:text="@string/chose_level"
        android:id="@+id/chose" />

    <Button
        android:layout_width="@dimen/Button_width"
        android:layout_height="@dimen/Button_height"
        android:onClick="Options"
        android:text="@string/options"
        android:id="@+id/options" />

    <Button
        android:layout_width="@dimen/Button_width"
        android:layout_height="@dimen/Button_height"
        android:onClick="Info"
        android:text="@string/info"
        android:id="@+id/info" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>