<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@color/Red">

    <TextView
        android:text="@string/warning"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="@dimen/Button_width"
            android:layout_height="@dimen/Button_height"
            android:text="@string/cancel"
            android:onClick="Home"
            android:id="@+id/cancel"/>

        <Button
            android:layout_width="@dimen/Button_width"
            android:layout_height="@dimen/Button_height"
            android:text="@string/sure"
            android:onClick="Reset"
            android:id="@+id/reset" />

    </TableRow>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id">
    </com.google.android.gms.ads.AdView>

</TableLayout>